# HachiTune

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Resources/lang/: en.json  ja.json  zh-TW.json  zh.json
Source/: JuceHeader.h  Main.cpp
Source/Audio/: AudioEngine.cpp  AudioEngine.h  EditorController.cpp  EditorController.h  FCPEPitchDetector.h  PitchDetectorType.h  RMVPEPitchDetector.cpp  RMVPEPitchDetector.h  SOMEDetector.h  Vocoder.cpp  Vocoder.h
Source/Audio/Analysis/: AudioAnalyzer.cpp  AudioAnalyzer.h
Source/Audio/Engine/: GridSyncUtil.h  HostSyncService.cpp  HostSyncService.h  PluginTransportController.cpp  PluginTransportController.h
Source/Audio/IO/: AudioFileManager.cpp
Source/Audio/Synthesis/: IncrementalSynthesizer.cpp  IncrementalSynthesizer.h
Source/Models/: Note.cpp  Note.h  Project.cpp  Project.h
Source/Plugin/: ARADocumentController.cpp  ARADocumentController.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/UI/: CustomMenuBarLookAndFeel.h  CustomTitleBar.cpp  IMainView.h  MainComponent.cpp  MainComponent.h  MainComponent.mm  MainViewFactory.cpp  MainViewFactory.h  ParameterPanel.cpp  ParameterPanel.h  PianoRollComponent.cpp  PianoRollComponent.h  PianoRollWorkspaceView.cpp  PianoRollWorkspaceView.h  SettingsComponent.cpp  SettingsComponent.h  StyledComponents.cpp  StyledComponents.h  ToolbarComponent.cpp  ToolbarComponent.h  WaveformComponent.cpp
Source/UI/Main/: MenuHandler.cpp  MenuHandler.h  SettingsManager.cpp  SettingsManager.h
Source/UI/PianoRoll/: CoordinateMapper.h  NoteSplitter.cpp  OverviewPanel.cpp  OverviewPanel.h  PianoRollRenderer.cpp  PianoRollRenderer.h  PitchEditor.cpp  PitchEditor.h  ScrollZoomController.cpp
Source/UI/Workspace/: DraggablePanel.cpp  DraggablePanel.h  RoundedCard.cpp  RoundedCard.h  SidebarComponent.cpp  SidebarComponent.h  WorkspaceComponent.cpp  WorkspaceComponent.h
Source/Utils/: AppLogger.h  BasePitchCurve.cpp  BasePitchCurve.h  BasePitchPreview.cpp  BasePitchPreview.h  CenteredMelSpectrogram.cpp  CenteredMelSpectrogram.h  Constants.h  CurveResampler.cpp  CurveResampler.h  DPIScaleManager.cpp  DPIScaleManager.h  Localization.h  MelSpectrogram.cpp  PlatformUtils.h  PlatformUtils.mm  SvgUtils.cpp  SvgUtils.h  Theme.cpp  Theme.h  TimecodeFont.h  UILayout.h  UndoManager.h  WindowSizing.h
Source/Utils/UI/: DPIScaleManager.h  DrawCurve.h  SvgUtils.cpp  SvgUtils.h  Theme.h  TimecodeFont.h  WindowSizing.h
cmake/: Asio.cmake
